# retrievalx

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  deny.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml
benches/: indexing_bench.rs  query_bench.rs  topk_bench.rs
crates/retrievalx-core/: Cargo.toml
crates/retrievalx-core/benches/: indexing_bench.rs  query_bench.rs  topk_bench.rs
crates/retrievalx-core/src/: config.rs  error.rs  lib.rs
crates/retrievalx-core/src/fusion/: mod.rs
crates/retrievalx-core/src/index/: mod.rs
crates/retrievalx-core/src/query/: mod.rs
crates/retrievalx-core/src/retrieval/: mod.rs
crates/retrievalx-core/src/scoring/: mod.rs
crates/retrievalx-eval/: Cargo.toml
crates/retrievalx-eval/examples/: beir_runner.rs
crates/retrievalx-eval/src/: lib.rs
crates/retrievalx-eval/src/beir/: mod.rs
crates/retrievalx-eval/src/metrics/: mod.rs
crates/retrievalx-eval/src/profiler/: mod.rs
crates/retrievalx-persist/: Cargo.toml
crates/retrievalx-persist/src/: lib.rs
crates/retrievalx-persist/src/codec/: mod.rs
crates/retrievalx-persist/src/export/: mod.rs
crates/retrievalx-persist/src/mmap/: mod.rs
crates/retrievalx-persist/src/wal/: mod.rs
crates/retrievalx-py/: Cargo.toml
crates/retrievalx-py/src/: lib.rs
crates/retrievalx-tokenize/: Cargo.toml
crates/retrievalx-tokenize/src/: lib.rs
crates/retrievalx-tokenize/src/stemmers/: mod.rs
crates/retrievalx-tokenize/src/stopwords/: mod.rs
crates/retrievalx-tokenize/src/tokenizers/: mod.rs
docs/: algorithms.md  architecture.md  benchmarks.md  migration.md  rank_bm25_benchmarks.md
examples/: beir_benchmark.py  beir_utils.py  benchmark_retrievalx_vs_rank_bm25.py  bm25f_structured_docs.py  comprehensive_benchmark_matrix.py  custom_tokenizer.py  ecommerce_query_tuning.py  it_ticket_search.py  legal_clause_discovery.py  multilingual_news_monitor.py  production_hybrid_reranking.py  query_expansion_prf.py  quickstart.py  rag_hybrid_pipeline.py  security_log_hunt.py  wal_crash_recovery.py
python/retrievalx/: __init__.py  _native.py  _native.pyi  config.py  eval.py  fusion.py  index.py  query.py
python/tests/: test_correctness.py  test_eval.py  test_fusion.py  test_persistence.py  test_retrieval.py  test_scoring.py  test_tokenizers.py
scripts/: check_all.sh
