[workspace]
members = [
  "crates/retrievalx-core",
  "crates/retrievalx-tokenize",
  "crates/retrievalx-persist",
  "crates/retrievalx-eval",
  "crates/retrievalx-py",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["retrievalx maintainers"]
repository = "https://github.com/Saswatsusmoy/retrievalx"
homepage = "https://github.com/Saswatsusmoy/retrievalx"
documentation = "https://github.com/Saswatsusmoy/retrievalx"

[workspace.dependencies]
anyhow = "1.0"
criterion = "0.5"
memmap2 = "0.9"
once_cell = "1.20"
regex = "1.11"
roaring = "0.10"
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
thiserror = "2.0"
unicode-segmentation = "1.12"
pyo3 = { version = "0.24.1", features = ["abi3-py39"] }
parking_lot = "0.12"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sprs = "0.11"
