[package]
name = "retrievalx-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
retrievalx-core = { path = "../retrievalx-core" }
retrievalx-tokenize = { path = "../retrievalx-tokenize" }
