[package]
name = "retrievalx-tokenize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
once_cell.workspace = true
regex.workspace = true
rust-stemmers.workspace = true
serde.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
